--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,24 +1,22 @@
 @import "tailwindcss";
 
 body{
-    overflow-x: hidden;
+    font-family: "Roboto",Arial,sans-serif;
 }
 .home-services-banner{
-    background: linear-gradient(rgb(11,20,96,0.8),rgb(11,20,96,0.8)), url("/src/assets/images/services.jpg") center center no-repeat;
-    height: 300px;
-    background-size: cover;
-    width: 100%;
+    background: linear-gradient(to top,rgb(11,20,96,0.8),rgb(11,20,96,0.8)), url("/src/assets/images/services.png");
 }
 
+.home-contactus-banner{
+    background: linear-gradient(to top,rgb(11,20,96,0.8),rgb(11,20,96,0.8)), url("/src/assets/images/contact.jpg");
+}
 .home-contact-banner{
-    background: linear-gradient(rgb(11,20,96,0.8),rgb(11,20,96,0.8)), url("/src/assets/images/contact.jpg") center center no-repeat;
-    height: 300px;
-    background-size: cover;
-    width: 100%;
+    background: linear-gradient(to top,rgb(11,20,96,0.8),rgb(11,20,96,0.8)), url("/src/assets/images/contact.jpg");
 }
 .footer-banner{
-    background: linear-gradient(rgb(11,20,96,0.9),rgb(11,20,96,0.9)), url("/src/assets/images/contact.jpg") center center no-repeat;
-    min-height: 400px;
-    background-size: cover;
-    width: 100%;
+    background: linear-gradient(to top,rgb(11,20,96,0.9),rgb(11,20,96,0.7)), url("/src/assets/images/footer-background.jpg");
+}
+
+.carousel .thumbs-wrapper{
+    text-align: center;
 }
